# AnsiQ

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_COMPLETE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_FIXES.md  Dockerfile  GIT_DEPLOYMENT_REPORT.md  LICENSE  PENDING_TASKS.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READY.md  PROFESSIONAL_CODE_AUDIT.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  TASK.md  alembic.ini  check_audit.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_mfa_gdpr.py  __init__.py
ansiq/: __init__.py
ansiq/analytics/: __init__.py  billing.py  cost_tracker.py
ansiq/api/: __init__.py  auth.py  keys.py  models.py  persistence.py  ratelimit.py  server.py  state.py  templates.py  tenant.py
ansiq/api/routes/: __init__.py  agents.py  crews.py  health.py  io.py  knowledge.py  memory.py  skills.py  templates.py  ws.py
ansiq/api/static/: dashboard.html
ansiq/auth/: __init__.py  audit.py  models.py  rbac.py
ansiq/brain/: __init__.py  reasoning.py
ansiq/cli/: __init__.py  main.py
ansiq/config/: __init__.py  parser.py
ansiq/core/: __init__.py  agent.py  crew.py  flow.py  hooks.py  identity.py  state.py  task.py
ansiq/embeddings/: __init__.py  base.py  local_provider.py  openai_provider.py
ansiq/evaluation/: __init__.py  ab_test.py  benchmark.py  metrics.py
ansiq/execution/: __init__.py  executor.py
ansiq/gateway/: __init__.py  gateway.py
ansiq/knowledge/: __init__.py  engine.py  source.py  store.py
ansiq/learning/: __init__.py  optimizer.py  trainer.py  trajectory.py
ansiq/llm/: __init__.py  anthropic_provider.py  base.py  huggingface_provider.py  ollama_provider.py  openai_provider.py  router.py
ansiq/memory/: __init__.py  episodic.py  fts_store.py  profile.py  providers.py
ansiq/orchestration/: __init__.py  dag.py  parallel.py
ansiq/plugins/: __init__.py  base.py  manager.py
ansiq/saas/: __init__.py  logging.py  sentry.py
ansiq/sandbox/: __init__.py  docker.py  policy.py
ansiq/scheduler/: __init__.py  scheduler.py
ansiq/skills/: __init__.py  base.py  learner.py  registry.py
ansiq/swarm/: __init__.py  consensus.py  debate.py  intelligence.py
ansiq/tools/: __init__.py  base.py  discover.py  registry.py
ansiq/tools/builtin/: __init__.py  code_tools.py  file_ops.py  web_tools.py
ansiq/ui/: __init__.py  components.py  dashboard.py  dashboard_pro.py
ansiq/vectordb/: __init__.py  base.py  chroma_provider.py
config/: analysis_crew.yaml  research_crew.yaml
examples/: advanced_usage.py  basic_usage.py  nextgen_features.py
loadtests/: locustfile.py
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana-dashboards/: ansiq.json
nginx/: nginx.conf
saas/: __init__.py  app.py  auth.py  billing.py  config.py  crypto.py  database.py  email.py  mfa.py  models.py  webhooks.py
saas/routes/: __init__.py  account.py  agents.py  api.py  auth.py  crews.py  tasks.py
scripts/: debug_saas_requests.py  deploy.sh  init-db.sql  setup.sh
templates/: index.html
tests/: __init__.py  conftest.py  test_all_modules.py  test_analytics.py  test_api.py  test_auth_ansiq.py  test_brain.py  test_config.py  test_core.py  test_e2e_saas.py  test_edge_cases.py  test_embeddings.py  test_evaluation.py  test_execution.py  test_gateway.py  test_hooks.py  test_knowledge.py  test_learning.py  test_llm.py  test_memory.py  test_memory_providers.py  test_orchestration.py  test_plugins.py  test_saas_routes.py  test_saas_security.py  test_sandbox.py  test_scheduler.py  test_skills.py  test_smoke_runtime.py  test_swarm.py  test_tools.py  test_vectordb.py  test_vision.py
